--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/CUlogo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/CUlogo.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>CodingUniversity</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/App.tsx"></script>
-  </body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/App.tsx"></script>
+</body>
 </html>
